@@ -1,5 +1,6 @@
 plugins {
     id("java")
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 group = "org.example"
@@ -9,14 +10,16 @@ repositories {
     mavenCentral()
 }
 
+javafx {
+    version = "17.0.2"
+    modules = listOf("javafx.controls", "javafx.fxml", "javafx.graphics", "javafx.base")
+}
+
 dependencies {
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     implementation("com.formdev:flatlaf:3.2")
-    //java fx
-    implementation("org.openjfx:javafx-controls:17.0.2")
-    implementation("org.openjfx:javafx-fxml:17.0.2")
 }
 
 tasks.test {
@@ -25,8 +28,19 @@ tasks.test {
 
 tasks.register<JavaExec>("runApp") {
     group = "application"
-    description = "Lancer l'application avec FlatLaf sans warning"
+    description = "Lancer l'application Swing avec FlatLaf sans warning"
     classpath = sourceSets.main.get().runtimeClasspath
     mainClass.set("com.ubo.tp.message.MessageAppLauncher")
     jvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
+}
+
+tasks.register<JavaExec>("runAppFx") {
+    group = "application"
+    description = "Lancer l'application JavaFX"
+    classpath = sourceSets.main.get().runtimeClasspath
+    mainClass.set("com.ubo.tp.message.MessageAppFxLauncher")
+    jvmArgs = listOf(
+        "--enable-native-access=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED"
+    )
 }
